--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -75,4 +75,7 @@
         </view>
     </view>
     <image class="buy" src="img/buy.png" mode="widthFix" lazy-load="false" binderror="" bindload="" bindtap="go_car"></image>
+    <view style='font-size: 25rpx; color: #725E5E;text-align:center;margin-bottom:20rpx'>宣铭科技www.xuanmingkeji.cn提供技术支持</view>
+</view>
+<view style=''>
 </view>
