--- a/storage/pages/detail/detail.wxss
+++ b/storage/pages/detail/detail.wxss
@@ -65,6 +65,7 @@ margin-left: 20rpx;
   vertical-align: 10rpx;
 }
 .active_information{
+  background: #fff;
   padding-bottom: 10rpx;
   border-bottom: solid 1px #169BD5;
 }
@@ -95,6 +96,12 @@ margin: 20rpx auto;
 width: 652rpx;
 margin: 0 auto;
 
+}
+.text{
+  background: #fff;
+}
+.comment{
+  background: #fff;
 }
 .reward text{
   font-size: 24rpx;
@@ -242,4 +249,120 @@ color: #66CC00;
     height:189rpx;
     position: absolute;
 
+}
+/* 预约 */
+.wrap{
+  background:#fff;
+  margin:10rpx;
+  
+}
+.date-show{
+  position:relative;
+  width:354rpx;
+  font-family:0;
+  font-size:31rpx;
+  color:#282828;
+  text-align:center;
+  margin:45rpx auto 10rpx;
+  font-weight:bold;
+  height:68rpx;
+  
+}
+.lt-arrow,.rt-arrow{
+	position: absolute;
+	top: 1rpx;
+	width: 60rpx;
+	height: 60rpx;
+}
+.lt-arrow image,.rt-arrow image{
+	width: 40rpx;
+}
+.lt-arrow{
+}
+.rt-arrow{
+  right: 0;
+  
+}
+.header{
+	font-size: 0;
+}
+.header>view{
+	display: inline-block;
+	width: 14.285%;
+	color: #B8B8B8;
+	font-size: 30rpx;
+	text-align: center;
+	padding: 15rpx 0;
+}
+.weekMark{
+	position: relative;
+}
+.weekMark view{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	border-bottom: 1px solid #22A7F6;
+}
+.date-box{
+	font-size: 0;
+	padding: 10rpx 0;
+}
+.date-box>view{
+	position: relative;
+	display: inline-block;
+	width: 14.285%;
+	color: #020202;
+	font-size: 40rpx;
+	text-align: center;
+	vertical-align: middle;
+	margin: 15rpx 0;
+}
+.date-head{
+	height: 60rpx;
+	line-height: 60rpx;
+	font-size: 26rpx;
+}
+.nowDay{
+background: #FAAB1B;
+
+}
+.nowDay .date-head{
+	width: 60rpx;
+	border-radius: 50%;
+	text-align: center;
+	color: #fff;
+	/* background-color: #22A7F6; */
+	margin: 0 auto;
+}
+.date-weight{
+	font-size: 22rpx;
+  padding: 4rpx 0;
+  color:#A7A7A7;
+
+}
+.nowDay .date-weight{
+	/* color: #22A7F6; */
+  color: #fff;
+}
+.one{
+	position: absolute;
+	bottom: 0;
+	right: 5rpx;
+	width: 20rpx;
+	height: 20rpx;
+	border-radius: 50%;
+	background-color: red;
+}
+.two{
+	position: absolute;
+	bottom: 30rpx;
+	right: 5rpx;
+	width: 20rpx;
+	height: 20rpx;
+	border-radius: 50%;
+	background-color: blue;
+}
+.aften>view{
+  color:#D6D6D6 !important;
 }
