--- a/invoice/pages/invoice_add/invoice_add.wxml
+++ b/invoice/pages/invoice_add/invoice_add.wxml
@@ -1,4 +1,62 @@
-<form bindsubmit="formSubmit1" bindreset="formReset" wx:if="{{select}}">
+<form bindsubmit="formSubmit" bindreset="formReset" wx:if="{{select==0}}">
+     <view class="all">
+         <view class="select_name">
+              <view class="select_left">选择户名</view>
+               <view class="select_right" bindtap="go_invoice_select">
+                   <view class="more_text">更多 </view> 
+                   <image class="more_img" src="img/u1326.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+              </view>
+         </view>
+         <view class="list2">
+            <view class="name_title">
+                <image class="name_img" src="img/u1329.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+                <view class="name_text">户名: </view>
+            </view>
+            <view class="list2_text">深圳市环保质量监督局</view>
+         </view>
+         <view class="tips">温馨提示：本平台提供发票寄送服务，且不提供发票作废服务，如需重开请联系平台商，如需退货需扣除发票款项；</view>
+         <view class="list">
+              <view class="list_name">
+                 发票类型 
+              </view>
+              <view class="input">
+                 <radio-group class="radio-group" bindchange="radioChange">
+                      <label class="radio"><radio value="企业" checked  color='#fff' />  企业 </label>
+                      <label class="radio"> <radio value="个人"  color='#fff' />  个人</label>
+                 </radio-group>
+              </view>
+         </view>
+         <view class="list">
+            <view class="list_name">发票抬头 </view>
+            <view class="input">
+              <input class="" value="" type="text" placeholder="深圳市环保质量监督局" name="name1"></input>
+            </view>
+         </view>
+         <view class="list">
+            <view class="list_name"> 企业税号 </view>
+            <view class="input">
+              <input class="" value="" type="text" placeholder="请输入纳税人识别号（统一社会信用代码）" name="num1"></input>
+            </view>
+         </view>
+        
+         <view class="list">
+            <view class="list_name">
+               发票类型 
+            </view>
+            <view class="input">
+             <radio-group class="radio-group" bindchange="radioChange">
+                  <label class="radio" wx:if="{{statics==3 || statics==1}}"><radio value="普通发票" checked  color='#fff'  name="invoic_type1" />  普通发票 </label>
+                  <label class="radio"  wx:if="{{statics==3 || statics==2}}"> <radio value="增值税专用发票"  color='#fff' name="invoic_type1" />  增值税专用发票</label>
+             </radio-group>
+          </view>
+       </view>
+       <view class="remit">重置，添加一个新户名</view>
+        
+            <button form-type="submit" class='button-hovers btn-area' >提交开票</button>
+         
+     </view>
+</form>
+<form bindsubmit="formSubmit1" bindreset="formReset" wx:if="{{select==1}}">
    <view class="all">
        <view class="select_name">
             <view class="select_left">选择户名</view>
@@ -62,11 +120,12 @@
        
    </view>
 </form>
-<form bindsubmit="formSubmit" bindreset="formReset" wx:if="{{!select}}">
+<form bindsubmit="formSubmit2" bindreset="formReset" wx:if="{{select==2}}" >
+ <input type='text' name="id" style="display: none;" value='{{enterprise.id}}'></input>
      <view class="all">
          <view class="select_name">
               <view class="select_left">选择户名</view>
-               <view class="select_right">
+               <view class="select_right" bindtap="go_invoice_select">
                    <view class="more_text">更多 </view> 
                    <image class="more_img" src="img/u1326.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
               </view>
@@ -93,13 +152,13 @@
          <view class="list">
             <view class="list_name">发票抬头 </view>
             <view class="input">
-              <input class="" value="" type="text" placeholder="深圳市环保质量监督局" name="name1"></input>
+              <input class="" value="{{enterprise.company}}" type="text" placeholder="深圳市环保质量监督局" name="name1" disabled='disabled'></input>
             </view>
          </view>
          <view class="list">
             <view class="list_name"> 企业税号 </view>
             <view class="input">
-              <input class="" value="" type="text" placeholder="请输入纳税人识别号（统一社会信用代码）" name="num1"></input>
+              <input class="" value="{{enterprise.company_number}}" type="text" placeholder="请输入纳税人识别号（统一社会信用代码）" name="num1"  disabled='disabled'></input>
             </view>
          </view>
         
@@ -108,9 +167,9 @@
                发票类型 
             </view>
             <view class="input">
-             <radio-group class="radio-group" bindchange="radioChange">
-                  <label class="radio" wx:if="{{statics==3 || statics==1}}"><radio value="普通发票" checked  color='#fff'  name="invoic_type1" />  普通发票 </label>
-                  <label class="radio"  wx:if="{{statics==3 || statics==2}}"> <radio value="增值税专用发票"  color='#fff' name="invoic_type1" />  增值税专用发票</label>
+             <radio-group class="radio-group" bindchange="radioChange0">
+                  <label class="radio" wx:if="{{statics==3 || statics==1}}"><radio value="普通发票" checked="{{enterprise.status==1?'true':''}}"  color='#fff'  name="invoic_type1" disabled='disabled' />  普通发票 </label>
+                  <label class="radio"  wx:if="{{statics==3 || statics==2}}"> <radio value="增值税专用发票"  color='#fff' name="invoic_type1" checked="{{enterprise.status==2?'true':''}}"  disabled='disabled' />  增值税专用发票</label>
              </radio-group>
           </view>
        </view>
@@ -119,4 +178,69 @@
             <button form-type="submit" class='button-hovers btn-area' >提交开票</button>
          
      </view>
-  </form>
+</form>
+<form bindsubmit="formSubmit13" bindreset="formReset" wx:if="{{select==3}}">
+ <input type='text' name="id" style="display: none;" value='{{personal.id}}'></input>
+   <view class="all">
+       <view class="select_name">
+            <view class="select_left">选择户名</view>
+             <view class="select_right" bindtap='go_invoice_select'>
+                 <view class="more_text">更多 </view> 
+                 <image class="more_img" src="img/u1326.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+            </view>
+       </view>
+       <view class="list2">
+          <view class="name_title">
+              <image class="name_img" src="img/u1329.png" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
+              <view class="name_text">户名: </view>
+          </view>
+          <view class="list2_text">深圳市环保质量监督局</view>
+       </view>
+       <view class="tips">温馨提示：本平台提供发票寄送服务，且不提供发票作废服务，如需重开请联系平台商，如需退货需扣除发票款项；</view>
+       <view class="list">
+            <view class="list_name">
+               发票类型 
+            </view>
+            <view class="input">
+               <radio-group class="radio-group" bindchange="radioChange">
+                    <label class="radio"><radio value="企业"  color='#fff' />  企业 </label>
+                    <label class="radio"> <radio value="个人"  color='#fff' checked  />  个人</label>
+               </radio-group>
+            </view>
+       </view>
+       <view class="list">
+          <view class="list_name">姓名 </view>
+          <view class="input">
+            <input class="" value="{{personal.name}}" type="text" placeholder="请输入真实姓名" name="name" disabled='disabled'></input>
+          </view>
+       </view>
+       <view class="list">
+          <view class="list_name"> 收票人手机 </view>
+          <view class="input">
+            <input class="" value="{{personal.user_phone}}" type="text" placeholder="请输入真实手机号码" name="phone_num" disabled='disabled'></input>
+          </view>
+       </view>
+       <view class="list">
+          <view class="list_name"> 收票人邮箱 </view>
+          <view class="input">
+            <input class="" value="{{personal.email}}" type="text" placeholder="用于接收电子发票" name="email" disabled='disabled'></input>
+          </view>
+       </view>
+       <view class="list">
+          <view class="list_name">
+             发票类型 
+          </view>
+          <view class="input">
+             <radio-group class="radio-group" bindchange="radioChange2">
+                  <label class="radio" wx:if="{{statics==3 || statics==1}}"><radio value="普通发票" checked  color='#fff'  name="invoic_type" />  普通发票 </label>
+           
+           
+             </radio-group>
+          </view>
+     </view>
+     <view class="remit">重置，添加一个新户名</view>
+      
+          <button form-type="submit" class='button-hovers btn-area' >提交开票</button>
+       
+   </view>
+</form>
