--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -253,7 +253,9 @@
 	<view class='invoice'>
 		<view class='is_invoice'>
 			<label class="checkbox">
-				<checkbox value="选择开具发票" />选择开具发票
+			<checkbox-group bindchange="check_invoice">
+				<checkbox value="0" />选择开具发票
+			</checkbox-group>
 			</label>
 			<view class='invoice_money text_red'>
 				¥ 0.00
