--- a/live/index/index.wxml
+++ b/live/index/index.wxml
@@ -1,21 +1,140 @@
 <!--live/index/index.wxml-->
-<view class=''>
+<view class='main'>
   <view class='nav'>
-    <view class='teaStorehouse'>茶仓</view>
-    <view class='teamountain'>茶山</view>
-    <view class='teafactory'>茶厂</view>
+    <view class='tea'>
+      <text class="sizecolor {{currentTab==0 ? ' change_current ' : 'not_change'}}" data-current="0" bindtap="swichNav">茶仓</text>
+    </view>
+    <view class='tea'>
+      <text class="sizecolor {{currentTab==1 ? ' change_current ' : 'not_change'}}" data-current="1" bindtap="swichNav">茶山</text>
+    </view>
+    <view class='tea'>
+      <text class="sizecolor {{currentTab==2 ? ' change_current ' : 'not_change'}}" data-current="2" bindtap="swichNav">茶厂</text>
+    </view>
   </view>
 
-  <view>
-    <swiper autoplay="ture">
-      <!-- <block wx:for="{{imgUrls}}"> -->
-        <swiper-item>
-          <image src="https://images.unsplash.com/photo-1551334787-21e6bd3ab135?w=640" class="slide-image" width="355" height="150" />
-          <image src="https://images.unsplash.com/photo-1551214012-84f95e060dee?w=640" class="slide-image" width="355" height="150" />
-          <image src="https://images.unsplash.com/photo-1551446591-142875a901a1?w=640" class="slide-image" width="355" height="150" />
-        </swiper-item>
-      <!-- </block> -->
+  <view class='swiper_main'>
+    <swiper current="{{currentTab}}" style='height: {{winHeight}}rpx' bindchange="bindChange">
+      <swiper-item>
+
+        <scroll-view scroll-y='true'>
+          <block wx:for="{{imgUrls}}" wx:key='index'>
+            <view>
+              <view class="slide-image">
+                <image src="{{item}}" bindtap='toLive'></image>
+              </view>
+              <view class='status_bar'>
+                <view class=''>
+                  <image src='../img/u2133.png' class='tubiao'></image>
+                </view>
+                <text class='store_name'>仓BJ01</text>
+
+                <view class=''>
+                  <image src='../img/u5440.png' class='tubiao'></image>
+                </view>
+                <text class='size'>230</text>
+
+                <view class=''>
+                  <image src='../img/u5437.png' class='tubiao'></image>
+                </view>
+                <text class='size'>230</text>
+
+                <view class=''>
+                  <image src='../img/u5439.png' class='tubiao'></image>
+                </view>
+                <text class='size'>230</text>
+
+                <view class=''>
+                  <image src='../img/u5462.png' class='tubiao'></image>
+                </view>
+                <text class='size_last'>230</text>
+              </view>
+            </view>
+          </block>
+        </scroll-view>
+
+      </swiper-item>
+
+      <swiper-item>
+        <view class=''>
+          <scroll-view class='scoll-h' scroll-y='true'>
+            <block wx:for="{{imgUrls}}" wx:key='index'>
+              <view style='width: 100%;'>
+                <view class="slide-image">
+                  <image src="{{item}}" bindtap='toLive'></image>
+                </view>
+                <view class='status_bar'>
+                  <view class=''>
+                    <image src='../img/u2133.png' class='tubiao'></image>
+                  </view>
+                  <text class='store_name'>仓BJ01</text>
+
+                  <view class=''>
+                    <image src='../img/u5440.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5437.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5439.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5462.png' class='tubiao'></image>
+                  </view>
+                  <text class='size_last'>230</text>
+                </view>
+              </view>
+            </block>
+          </scroll-view>
+        </view>
+      </swiper-item>
+      <swiper-item>
+        <view class=''>
+          <scroll-view class='scoll-h' scroll-y='true'>
+            <block wx:for="{{imgUrls}}" wx:key='index'>
+              <view style='width: 100%;'>
+                <view class="slide-image">
+                  <image src="{{item}}" bindtap='toLive'></image>
+                </view>
+                <view class='status_bar'>
+                  <view class=''>
+                    <image src='../img/u2133.png' class='tubiao'></image>
+                  </view>
+                  <text class='store_name'>仓BJ01</text>
+
+                  <view class=''>
+                    <image src='../img/u5440.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5437.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5439.png' class='tubiao'></image>
+                  </view>
+                  <text class='size'>230</text>
+
+                  <view class=''>
+                    <image src='../img/u5462.png' class='tubiao'></image>
+                  </view>
+                  <text class='size_last'>230</text>
+                </view>
+              </view>
+            </block>
+          </scroll-view>
+        </view>
+      </swiper-item>
     </swiper>
+
+
   </view>
 
 </view>
