--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -12,10 +12,9 @@
 				</image>
 			</view>
 		</view>
-		<checkbox-group bindchange="checkboxChange">
-			<view class='order_list' wx:for="{{coupon_order}}" data-id="{{item.id}}">
+			<view class='order_list' wx:for="{{coupon_order}}" data-id="{{item.id}}" bindtap="checkboxChangess" data-value="{{item.suit_price[0]}}">
 				<view class='order_list_content'>
-					<checkbox value="{{item.id}}" checked="{{item.checked}}" data-id="{{item.name}}" />
+					<checkbox value="{{item.id}}" checked="{{item.checked}}"   />
 					<view class="coupon_box">
 						<image class="coupon_box_img" src="img/u11123.png" mode="widthFix"></image>
 						<view class="coupon_money_box">
@@ -25,13 +24,14 @@
 						<view class="coupon_info_box">
 							<view class="coupon_name">{{item.label}}</view>
 							<view class="validity">有效期：{{item.start_time}}-{{item.end_time}}</view>
-							<view class="range">适用范围：<text wx:for="{{item.scope}}">{{item}}</text></view>
+							<view class="range">适用范围：
+							     <text wx:for="{{item.suit_price}}" >{{item}}</text>
+							</view>
 							<view class="go_use">立即使用>></view>
 						</view>
 					</view>
 				</view>
 			</view>
-		</checkbox-group>
 
 	</view>
 </view>
