--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -21,7 +21,7 @@
 </view>
 <!--content-->
    <view class="nav">
-	   <view class="this" bindtap="go" data-id="../order/order"> 普通订单</view>
+	   <view class="this"> 普通订单</view>
 	   <view class="" bindtap="go"> 众筹订单</view>
 	   <view class="" bindtap="go"> 定制订单</view>
 	   <view class="" bindtap="go"  data-id="../integral_order/integral_order"> 积分订单</view>
